--- a/poly/notice-prod.yml
+++ b/poly/notice-prod.yml
@@ -20,7 +20,7 @@ spring:
     password: '1234'
     driver-class-name: org.mariadb.jdbc.Driver
     username: poly
-    url: jdbc:mariadb://localhost:3306/myDB
+    url: jdbc:mariadb://192.168.159.129:3306/myDB
 server:
   port: 13000
 management:
