--- a/poly/notice-prod.yml
+++ b/poly/notice-prod.yml
@@ -17,10 +17,11 @@ spring:
     check-template-location: true
     suffix: .html
   datasource:
-    password: '1234'
+    password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
     username: poly
-    url: jdbc:mariadb://192.168.159.129:3306/myDB
+#    url: jdbc:mariadb://192.168.159.129:3306/myDB
+    url: jdbc:mariadb://localhost:13306/myDB
 server:
   port: 13000
 management:
